--- a/frontend/static/frontend/styles/sass/components/_menu.scss
+++ b/frontend/static/frontend/styles/sass/components/_menu.scss
@@ -83,7 +83,7 @@
 }
 
 .pages {
-    overflow: scroll;
+    overflow-y: scroll;
     height: 78vh;
 }
 
